@@ -4,6 +4,9 @@ Changelog
 1.0b5 - Unreleased
 ------------------
 
+* Match ``getObjectPositionInParent`` behavior and handle unordered folders
+  inside ordered folders shown in the navigation tree at the same time.
+  [hannosch]
 
 1.0b4 - Released March 6, 2010
 ------------------------------
